--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.0",
+    "emailjs-com": "^3.2.0",
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
     "formik": "^2.4.5",
